--- a/home.css
+++ b/home.css
@@ -15,6 +15,7 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a00fb', endColorstr='#e600ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     background-repeat: no-repeat;
     background-attachment: fixed;
+    /*background: white;*/
 }
 
 aside {
@@ -36,8 +37,13 @@ aside {
 }
 
 .Home_2{
-    padding: .8em 0em;
+    padding: .0em 5em;
 }
+
+.Home_1{
+    padding: .0em 5em;
+}
+
 
 figure {
     margin: 0;
@@ -85,7 +91,7 @@ main {
 }
 
 .header1 {
-    color: #fff;
+    color:black;
     font-size: 3em;
     margin-top: 2em;
 }
@@ -108,17 +114,27 @@ p {
     margin: 2em 0;
 }
 
+
 @media only screen and (min-width: 768px) {
 
-    body {
+    /*body {
         display: grid;
         grid-template-columns: 20% auto;
         padding: 2em;
-    }
+    }*/
 
-    img {
-        display: none;
+    .Home_2{
+        /*padding: .3em 5em;*/
+        float: left ;
+    
     }
+    
+    .Home_1{
+       /* padding: .0em 5em;*/
+        float: right;
+   
+    }
+    
 
     aside {
         background: #DCE1F6;
@@ -128,8 +144,8 @@ p {
     }
 
     main {
-        padding: 4em;
-        background: white url('../images/bg.svg') no-repeat bottom right;
+        padding: 2em;
+        background:rgb(255, 255, 255) ;
         background-size: 70%;
     }
 
@@ -169,9 +185,10 @@ p {
     }
 
    .header1 {
-        color: #fff;
+        color:black;
         font-size: 3em;
-        margin-top: 2em;
+        margin-left: 1em;
+       
         
     }
 
