--- a/interview.css
+++ b/interview.css
@@ -14,8 +14,8 @@
   }
   
   .sighnup-form{
-    width: 360px;
-    background: #f1f1f1;
+    width: 400px;
+    background: white;
     height: 880px;
     padding: 50px 40px;
     border-radius: 10px;
@@ -104,7 +104,7 @@
     padding-left: 35px;
     margin-bottom: 12px;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 18px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -127,7 +127,9 @@
     left: 0;
     height: 25px;
     width: 25px;
-    background-color: #eee;
+    background-color: rgb(238, 238, 238);
+    outline-style: dott ed;
+    outline: black;
   }
   
   /* On mouse-over, add a grey background color */
@@ -163,4 +165,18 @@
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+  }
+
+  @media only screen and (min-width: 768px) {
+    .sighnup-form{
+      width: 660px;
+      background: #f1f1f1;
+      height: 880px;
+      padding: 50px 40px;
+      border-radius: 10px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+    }
   }
