--- a/newscreening.css
+++ b/newscreening.css
@@ -182,3 +182,16 @@
     height: 40px;
   }
   
+  @media only screen and (min-width: 768px) {
+    .sighnup-form{
+      width: 660px;
+      background: #f1f1f1;
+      height: 880px;
+      padding: 50px 40px;
+      border-radius: 10px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+    }
+  }
