--- a/profile.css
+++ b/profile.css
@@ -17,6 +17,14 @@ body {
     /*background: white;*/
 }
 
+#avatar {
+    border-radius: 50%;
+    background: #fff;
+    width: 50px;
+    height: 50px;
+    margin: 2em auto 1em auto;
+}
+
 aside {
     color: #fff;
     display: grid;
@@ -41,7 +49,7 @@ aside {
 }
 
 .Home_1{
-    padding: .0em 2em;
+    padding: .0em 5em;
     position: relative;
 }
 
@@ -146,18 +154,20 @@ p {
 
 .form1{
     width: 360px;
-    background: #f1f1f1;
-    
-    padding: 80px 40px;
-    border-radius: 10px;
-    
-    
+        background: #f1f1f1;
+        
+        padding: 80px 40px;
+        border-radius: 10px;
+        position: relative;
+        left: 50%;
+        top: 45%;
+        transform: translate(-50%,-50%);
     
   }
 
   .logbtn{
-    display: block;
-    width: 100%;
+    
+    width: 49%;
     height: 50px;
     border: none;
     background: linear-gradient(120deg,#3498db,#8e44ad,#3498db);
@@ -166,13 +176,49 @@ p {
     outline: none;
     cursor: pointer;
     transition: .5s;
-    
+    position: relative;
   }
 
   .logbtn:hover{
     background-position: right;
   }
 
+   .txtb{
+    border-bottom: 2px solid #adadad;
+    position: relative;
+    margin: 30px 0;
+  }
+  
+  .txtb input{
+    font-size: 15px;
+    color: #333;
+    border: none;
+    width: 100%;
+    outline: none;
+    background: none;
+    padding: 0 5px;
+    height: 40px;
+  }
+  
+  .txtb span::before{
+    content: attr(data-placeholder);
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #adadad;
+    transform: translateY(-50%);
+    z-index: -1;
+    transition: .5s;
+  }
+  
+  .txtb span::after{
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    background: linear-gradient(120deg,#3498db,#8e44ad);
+    transition: .5s;
+  }
 
 @media only screen and (min-width: 768px) {
 
