--- a/viewhep.css
+++ b/viewhep.css
@@ -13,7 +13,7 @@
     background-image: linear-gradient(120deg,#3498db,#8e44ad);
   }
   
-  .sighnup-form{
+  .form1{
     width: 360px;
     background: #f1f1f1;
     
@@ -21,13 +21,52 @@
     border-radius: 10px;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 480px;
     transform: translate(-50%,-50%);
   }
   
   .login-form h1{
     text-align: center;
     margin-bottom: 60px;
+  }
+  ul {
+    display: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: .8em;
+    display: block;
+    padding: 1.5em 3em;
+    background-color: rgba(255,255,255,.35);
+    color: #000;
+  }
+  
+  main {
+    background: #fff;
+    padding: 1em 1.4em;
+  }
+  
+  .header1 {
+    color:black;
+    font-size: 3em;
+    margin-top: 2em;
+  }
+  
+  aside {
+    color: #fff;
+    display: grid;
+    grid-template-columns: auto 40px;
+    padding: 2em;
+  }
+  
+  p {
+    font-size: 1.1em;
+    line-height: 1.5em;
   }
   
   .txtb{
@@ -87,6 +126,10 @@
     transition: .5s;
   }
   
+  .Menu_Bar {
+    width: 40px;
+    cursor: pointer;
+}
   .logbtn:hover{
     background-position: right;
   }
@@ -95,4 +138,33 @@
     margin-top: 60px;
     text-align: center;
     font-size: 13px;
+  }
+
+  .bg-modal{
+      display: none;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.7);
+      position : absolute;
+      top: 0;
+      justify-content: center;
+      align-items: center;
+  }
+
+  .modal-content{
+    width: 300px;
+    background-color: white;
+    text-align: center;
+    padding: 30px;
+    position: relative;
+    
+  }
+
+  .close{
+      position: absolute;
+      top: 0;
+      right: 14px;
+      font-size: 42px;
+      transform: rotate(45deg);
+      cursor: pointer;
   }
