--- a/viewhpv.css
+++ b/viewhpv.css
@@ -13,7 +13,7 @@
     background-image: linear-gradient(120deg,#3498db,#8e44ad);
   }
   
-  .sighnup-form{
+  .form1{
     width: 360px;
     background: #f1f1f1;
     
@@ -85,6 +85,7 @@
     outline: none;
     cursor: pointer;
     transition: .5s;
+    font-size: 5px;
   }
   
   .logbtn:hover{
@@ -95,4 +96,114 @@
     margin-top: 60px;
     text-align: center;
     font-size: 13px;
+  }
+
+
+figure {
+  margin: 0;
+}
+
+figcaption {
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
+nav {
+  background: #fff;
+}
+
+.active {
+  position: absolute;
+  display: block;
+  background: #fff;
+  width: 50%;
+  left: 0;
+  top: 0;
+  height: 100%;
+}
+
+ul {
+  display: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: .8em;
+  display: block;
+  padding: 1.5em 3em;
+  background-color: rgba(255,255,255,.35);
+  color: #000;
+}
+
+main {
+  background: #fff;
+  padding: 1em 1.4em;
+}
+
+.header1 {
+  color:black;
+  font-size: 3em;
+  margin-top: 2em;
+}
+
+aside {
+  color: #fff;
+  display: grid;
+  grid-template-columns: auto 40px;
+  padding: 2em;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.5em;
+}
+
+.cta {
+  display: block;
+  color: #fff;
+  background: #0E7FFF;
+  text-decoration: none;
+  padding: 8px 50px;
+  font-size: 1.2em;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 4px;
+  margin: 2em 0;
+}
+
+  .bg-modal{
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.7);
+      
+      position : absolute;
+      top: 0;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      
+  }
+
+
+  .modal-content{
+    width: 300px;
+    
+    background-color: white;
+    text-align: center;
+    padding: 30px;
+    position: relative;
+
+  }
+
+  .close{
+      position: absolute;
+      top: 0;
+      right: 14px;
+      font-size: 42px;
+      transform: rotate(45deg);
+      cursor: pointer;
   }
