--- a/newscreening.css
+++ b/newscreening.css
@@ -13,10 +13,10 @@
     background-image: linear-gradient(120deg,#3498db,#8e44ad);
   }
   
-  .sighnup-form{
+  .screening-form{
     width: 360px;
     background: #f1f1f1;
-    height: 1300px;
+    
     padding: 50px 40px;
     border-radius: 10px;
     position: absolute;
