--- a/includes/checkReminderHPVdose2.html
+++ b/includes/checkReminderHPVdose2.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="reminder.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
   </head>
 <body>
-    <h3>Hi </h3>
+  <form>
+      <h3>Hi </h3>
+
+      Our records Show you are due to recieve your third dose of Garsadil for HPV in 2 weeks, to find a clinic near you click here. 
+       
+  </form>
+    
     
 </body>
