--- a/sighnup.css
+++ b/sighnup.css
@@ -16,12 +16,12 @@
   .sighnup-form{
     width: 360px;
     background: #f1f1f1;
-    height: 580px;
+    
     padding: 80px 40px;
     border-radius: 10px;
-    position: absolute;
+    position: relative;
     left: 50%;
-    top: 50%;
+    top: 680px;
     transform: translate(-50%,-50%);
   }
   
