--- a/includes/checkReminderHPVdose2.html
+++ b/includes/checkReminderHPVdose2.html
@@ -3,10 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="reminder.css">
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
   </head>
 <body>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
+
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    font-family: montserrat;
+    box-sizing: border-box;
+  }
+  
+  body{
+    min-height: 100vh;
+    background-color: #EB3A70;
+  }
+
+  form{
+    width: 360px;
+    background: #f1f1f1;
+    
+    padding: 80px 40px;
+    border-radius: 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+  </style>
   <form>
       <h3>Hi </h3>
 
