--- a/includes/screening_notif.html
+++ b/includes/screening_notif.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
     <script src="https://kit.fontawesome.com/f52176a8e0.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
   </head>
 <body>
+
   <style>
     @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
+    body, html {
+    height: calc(100% - 2em);
+    margin: 0;
+    font-family: 'Montserrat';
+    background-color: white;
+}
 
 *{
     margin: 0;
@@ -26,7 +32,7 @@
   }
 
   form{
-    width: 360px;
+    width: 460px;
     background: #f1f1f1;
     
     padding: 80px 40px;
@@ -42,9 +48,12 @@
   }
   </style>
   <form>
-      <h1>Hi  <i class="fas fa-syringe"></i></h1>
-    <br>
-      Our records Show you are due to recieve your third dose of Garsadil for HPV in 2 weeks, to find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
+      <h1>Time to test! <i class="fas fa-vial"></i></h1>
+        <br>
+      It is reccomended to test for sexaully transmitted infections every 3 months,
+      to order a self testing kit for free visit or you can find a clinic near you with 
+
+       
   </form>
     
     
