--- a/interview.css
+++ b/interview.css
@@ -10,7 +10,7 @@
   
   body{
     min-height: 100vh;
-    background-image: linear-gradient(120deg,#3498db,#8e44ad);
+    background-color: #EB3A70;
   }
   
   .sighnup-form{
