--- a/login.css
+++ b/login.css
@@ -9,8 +9,7 @@
   }
   
   body{
-    min-height: 100vh;
-    background-image: linear-gradient(120deg,#3498db,#8e44ad);
+    background-color: #EB3A70;
   }
   
   .login-form{
@@ -70,23 +69,9 @@
   .focus + span::before{
     top: -5px;
   }
-  .focus + span::after{
-    width: 100%;
-  }
+ 
   
-  .logbtn{
-    display: block;
-    width: 100%;
-    height: 50px;
-    border: none;
-    background: linear-gradient(120deg,#3498db,#8e44ad,#3498db);
-    background-size: 200%;
-    color: #fff;
-    outline: none;
-    cursor: pointer;
-    transition: .5s;
-  }
-  
+ 
   .logbtn:hover{
     background-position: right;
   }
