--- a/sighnup.css
+++ b/sighnup.css
@@ -8,10 +8,21 @@
     box-sizing: border-box;
   }
   
-  body{
-    min-height: 100vh;
-    background-image: linear-gradient(120deg,#3498db,#8e44ad);
-  }
+  body, html {
+    height: calc(100% + 9em);
+    margin: 0;
+    font-family: 'Montserrat';
+    background-color: white;
+}
+body {
+        
+  min-height: 100vh;
+  background-color: #EB3A70;
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a00fb', endColorstr='#e600ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+}
   
   .sighnup-form{
     width: 360px;
