--- a/viewhpv.css
+++ b/viewhpv.css
@@ -8,10 +8,7 @@
     box-sizing: border-box;
   }
   
-  body{
-    min-height: 100vh;
-    background-image: linear-gradient(120deg,#3498db,#8e44ad);
-  }
+ 
   
   .form1{
     width: 360px;
@@ -19,10 +16,8 @@
     
     padding: 80px 40px;
     border-radius: 10px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    
+    margin: auto;
   }
   
   .login-form h1{
@@ -74,19 +69,6 @@
     width: 100%;
   }
   
-  .logbtn{
-    display: block;
-    width: 100%;
-    height: 50px;
-    border: none;
-    background: linear-gradient(120deg,#3498db,#8e44ad,#3498db);
-    background-size: 200%;
-    color: #fff;
-    outline: none;
-    cursor: pointer;
-    transition: .5s;
-    font-size: 5px;
-  }
   
   .logbtn:hover{
     background-position: right;
