Dashboard + System Testinng

--- a/includes/dashboard.html
+++ b/includes/dashboard.html
@@ -42,9 +42,32 @@
   }
   </style>
   <form>
-      <h1>Hi There! <i class="fas fa-syringe"></i></h1>
+      <h1>Monthly User Dashboard <i class="fas fa-syringe"></i></h1>
     <br>
-      Our records Show you are due to recieve a booster dose of Garsadil for HPV in 2 weeks, to find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
+      The below data presents the details of all users: 
+      <br>
+      Users with diagnoed with a mental health condition
+      <br><br>
+      Out to family and friends
+      <br><br>
+      Want to cut down on drinking
+      <br><br>
+      Take club drugs
+      <br><br>
+      Are a smoker 
+      <br><br>
+      Excercise regualrly
+      <br><br>
+
+      Positive Test Results seen in the last 3 months:
+      <br>
+      Chlamydia: 
+      <br>
+      Gonnorhea: 
+      <br>
+      Syphillis: 
+      <br>
+      HIV: 
   </form>
     
     
