--- a/includes/hep_reminder.html
+++ b/includes/hep_reminder.html
@@ -5,9 +5,9 @@
     <title></title>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+    <script src="https://kit.fontawesome.com/f52176a8e0.js" crossorigin="anonymous"></script>
   </head>
 <body>
-
   <style>
     @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
@@ -36,12 +36,15 @@
     top: 50%;
     transform: translate(-50%,-50%);
   }
+
+  .fas{
+    color: #EB3A70;
+  }
   </style>
   <form>
-      <h3>Hi </h3>
-
-      Our records Show you are due to recieve your third dose of Garsadil for HPV in 2 weeks, to find a clinic near you click here. 
-       
+      <h1>Hi There! <i class="fas fa-syringe"></i></h1>
+    <br>
+      Our records Show you are due to recieve a booster dose of Twinnrix for Hepatitus A & B in 2 weeks, to find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
   </form>
     
     
