--- a/includes/hpv_reminder_2.html
+++ b/includes/hpv_reminder_2.html
@@ -44,7 +44,8 @@
   <form>
       <h1>Hi There! <i class="fas fa-syringe"></i></h1>
     <br>
-      Our records Show you are due to recieve a booster dose of Garsadil for HPV in 2 weeks, to find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
+      Our records Show you are due to recieve a booster dose of Garsadil for HPV. If you have already recieved this at a clinic please update your profile so we can let you know when to return again. 
+      To find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
   </form>
     
     
