--- a/interview.css
+++ b/interview.css
@@ -8,11 +8,22 @@
     box-sizing: border-box;
   }
   
-  body{
-    min-height: 100vh;
-    background-color: #EB3A70;
-  }
-  
+  body, html {
+    height: calc(100% + 9em);
+    margin: 0;
+    font-family: 'Montserrat';
+    background-color: white;
+}
+body {
+        
+  min-height: 100vh;
+  background-color: #EB3A70;
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a00fb', endColorstr='#e600ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+}
+
   .sighnup-form{
     width: 400px;
     background: white;
@@ -21,7 +32,7 @@
     border-radius: 10px;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 580px;
     transform: translate(-50%,-50%);
   }
   
@@ -70,22 +81,9 @@
   .focus + span::before{
     top: -5px;
   }
-  .focus + span::after{
-    width: 100%;
-  }
+ 
   
-  .next_btn{
-    display: block;
-    width: 100%;
-    height: 50px;
-    border: none;
-    background: linear-gradient(120deg,#3498db,#8e44ad,#3498db);
-    background-size: 200%;
-    color: #fff;
-    outline: none;
-    cursor: pointer;
-    transition: .5s;
-  }
+ 
   
   .next_btn:hover{
     background-position: right;
@@ -139,7 +137,7 @@
   
   /* When the checkbox is checked, add a blue background */
   .container input:checked ~ .checkmark {
-    background-color: #2196F3;
+    background-color: #EF0D50;
   }
   
   /* Create the checkmark/indicator (hidden when not checked) */
