--- a/activities2.css
+++ b/activities2.css
@@ -6,6 +6,49 @@
     text-decoration: none;
   }
   
+  .txtb{
+    border-bottom: 2px solid #adadad;
+    position: relative;
+    margin: 30px 0;
+  }
+
+  .txtb span::after{
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    background: linear-gradient(120deg,#3498db,#8e44ad);
+    transition: .5s;
+  }
+  
+  .txtb input{
+    font-size: 15px;
+    color: #333;
+    border: none;
+    width: 100%;
+    outline: none;
+    background: none;
+    padding: 0 5px;
+    height: 40px;
+  }
+  
+ 
+  .txtb span::before{
+    content: attr(data-placeholder);
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #adadad;
+    transform: translateY(-50%);
+    z-index: -1;
+    transition: .5s;
+  }
+  
+  .focus + span::before{
+    top: -5px;
+  }
+   
+
   .middle{
     position: absolute;
     top: 50%;
@@ -72,4 +115,5 @@
   .item:target .smenu{
     max-height: 10em;
   }
+  
   
