--- a/home.css
+++ b/home.css
@@ -15,6 +15,7 @@ body {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a00fb', endColorstr='#e600ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
         background-repeat: no-repeat;
         background-attachment: fixed;
+        height: auto;
     /*background: white;*/
 }
 
@@ -181,6 +182,12 @@ p {
 
   .logbtn:hover{
     background-position: right;
+  }
+
+  textarea{
+      width:450px;
+      margin: auto;
+      font-size: large;
   }
 
 
