--- a/profile.css
+++ b/profile.css
@@ -14,6 +14,9 @@ body {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a00fb', endColorstr='#e600ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
         background-repeat: no-repeat;
         background-attachment: fixed;
+        max-width: 300px;
+        margin: auto;
+        position: relative;
     /*background: white;*/
 }
 
@@ -163,6 +166,10 @@ p {
         top: 45%;
         transform: translate(-50%,-50%);
     
+  }
+
+  .test{
+     
   }
 
   .logbtn{
