--- a/includes/hep_reminder.html
+++ b/includes/hep_reminder.html
@@ -44,7 +44,7 @@
   <form>
       <h1>Hi There! <i class="fas fa-syringe"></i></h1>
     <br>
-      Our records Show you are due to recieve a booster dose of Twinnrix for Hepatitus A & B in 2 weeks, to find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
+      Our records show you are due to recieve a booster dose of Twinnrix for Hepatitus A & B in 2 weeks, to find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
   </form>
     
     
