--- a/includes/hep_reminder_2.html
+++ b/includes/hep_reminder_2.html
@@ -44,7 +44,7 @@
   <form>
       <h1>Hi There! <i class="fas fa-syringe"></i></h1>
     <br>
-      Our records Show you are due to recieve a booster dose of Twinrix for Hepatitus A & B. If you have already recieved this at a clinic please update your profile so we can let you know when to return again. 
+      Our records show you are due to recieve a booster dose of Twinrix for Hepatitus A & B. If you have already recieved this at a clinic please update your profile so we can let you know when to return again. 
       To find a clinic near you <a href="https://sxt.org.uk/service">click here</a>      
   </form>
     
